fixed issue with header on mobile

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -133,6 +133,7 @@ figcaption {
     
     ul {
         padding: 0;
+        margin: 0;
     }
     
     li {
