--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -1,3 +1,12 @@
+@media (max-width: 700px) {
+    #page-nav {
+        a {
+            font-size: 1em;
+            padding: 1em 1em 1.1em;
+        }
+    }
+}
+
 @media (max-width: 500px) {
     #page-header {
         text-align: center;
